--- a/src/frontend/TuneShare/src/app/app.component.html
+++ b/src/frontend/TuneShare/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar sticky-top navbar-expand-md navbar-dark p-3" style="background-color: #8A5CA3; font-size: larger">
-  <a class="navbar-brand" href="">TuneShare</a> <!-- Logo -->
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark px-3" style="background-color: #8A5CA3; font-size: larger">
+  <a class="navbar-brand" href="#"><img ngSrc="assets/logoTuneShare.png" alt="TuneShareLogo" width="45" height="45"> TuneShare</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,14 +20,14 @@
           <input class="form-control mr-sm-2" type="search" placeholder="Suchen" aria-label="Search" style="background-color: #D8C9E1; border-bottom-left-radius: 0; border-color: #8A5CA3;">
         </div>
     </form>
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item">
+    <ul class="navbar-nav ms-auto my-0 py-0" style="font-size: x-large">
+      <li class="nav-item mx-1">
         <a class="nav-link" href="#"><i class="bi bi-plus-circle-fill"></i></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item mx-1 my-0 py-0">
         <a class="nav-link" href="#"><i class="bi bi-arrow-repeat"></i></a>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown mx-1 my-0 py-0">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="bi bi-person-circle"></i>
         </a>
@@ -40,7 +40,7 @@
     </ul>
   </div>
 </nav>
-<div style="background-color: #D8C9E1;">
+<div class="p-2" style="background-color: #D8C9E1;">
   Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
   Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
