--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.html
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.html
@@ -7,6 +7,6 @@
   <div class="card-body">
     <h5 class="card-title">{{ playlist.name }}</h5>
     <p class="card-text">{{ playlist.description }}</p>
-    <a href="#" class="btn btn-primary">Play</a>
+    <a class="btn btn-primary">Play</a>
   </div>
 </div>
