f3-home page and playlist layout

--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.html
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.html
@@ -1,12 +1,8 @@
 <div class="card">
-  <img
-    [src]="playlist.imageUrl"
-    class="card-img-top"
-    alt="{{ playlist.name }}"
-  />
+  <img [src]="playlist.imageUrl" class="card-img-top" alt="{{ playlist.name }}" />
   <div class="card-body">
     <h5 class="card-title">{{ playlist.name }}</h5>
     <p class="card-text">{{ playlist.description }}</p>
-    <a class="btn btn-primary">Play</a>
+<!--    <a class="btn btn-primary"><i class="bi-heart"></i></a> -->
   </div>
 </div>
