--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -1,9 +1,8 @@
-
 <div class="container mt-4">
   <h2 class="mb-4">{{ title }}</h2>
   <div class="row">
     <app-playlist
-      class="col-md-4 col-sm-6 mb-4"
+      class="col"
       *ngFor="let playlist of playlists"
       [playlist]="playlist"
     ></app-playlist>
