--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.html
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.html
@@ -1,7 +1,7 @@
 <div class="card">
-  <img [src]="playlist.imageUrl" class="card-img-top" alt="{{ playlist.name }}" />
+  <img [src]="playlist.cover_url" class="card-img-top" alt="{{ playlist.title }}" />
   <div class="card-body">
-    <h5 class="card-title">{{ playlist.name }}</h5>
+    <h5 class="card-title">{{ playlist.title }}</h5>
     <p class="card-text">{{ playlist.description }}</p>
 <!--    <a class="btn btn-primary"><i class="bi-heart"></i></a> -->
   </div>
