f3 - home layout and updated playlist style

--- a/src/frontend/TuneShare/src/app/homepage/homepage.component.html
+++ b/src/frontend/TuneShare/src/app/homepage/homepage.component.html
@@ -1,3 +1,9 @@
-<div class="container mt-4">
-	<app-playlist-rotate [playlists]="playlists" title="Your playlists"></app-playlist-rotate>
+<div class="container mt-3 mb-5">
+	<app-playlist-rotate class="mx-auto" [playlists]="playlists" title="Your playlists"></app-playlist-rotate>
+</div>
+<div class="container mt-3 mb-5">
+  <app-playlist-rotate class="mx-auto" [playlists]="playlists" title="Your friend's most recent playlists"></app-playlist-rotate>
+</div>
+<div class="container mt-3 mb-5">
+  <app-playlist-rotate class="mx-auto" [playlists]="playlists" title="New on Spotify"></app-playlist-rotate>
 </div>
