--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.html
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.html
@@ -6,10 +6,10 @@
     <h5 class="card-title overflow-hidden w-100">{{ playlist.title }}</h5>
     <div class="row row-cols-2 mb-2 justify-content-between">
       <a class="card-author mb-0 overflow-hidden" href="/library">{{ playlist.owner_id }}</a> <!-- hier eine Abrfrage zum Namen des Owners ergänzen und Link zum Profil-->
-      <div class="logos">
-        <a class="btn btn-primary linkedButton appleLink"><i class="bi-apple"></i></a>
-        <a class="btn btn-primary linkedButton spotifyLink"><i class="bi-spotify"></i></a>
-        <a class="btn btn-primary linkedButton shareLink"><i class="bi-share"></i></a>
+      <div class="logos align-items-center">
+        <a class="linkedButton appleLink my-auto py-auto"><i class="bi-apple"></i></a><a> | </a>
+        <a class="linkedButton spotifyLink my-auto py-auto"><i class="bi-spotify"></i></a><a> | </a>
+        <a class="linkedButton shareLink my-auto py-auto"><i class="bi-share"></i></a>
       </div>
     </div>
   </div>
