--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.html
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.html
@@ -1,11 +1,12 @@
 <div class="card mx-auto">
   <div class="px-3 pt-3">
-    <img [src]="playlist.cover_url" class="card-img-top art-cover" alt="{{ playlist.title }}"/>
+    <img [src]="playlist.cover_url" class="card-img-top art-cover" alt="{{ playlist.title }}"
+         (mousemove)="tilt($event)" (mouseleave)="resetTilt($event)" />
   </div>
   <div class="card-body mx-3 mt-3 p-0">
     <h5 class="card-title overflow-hidden w-100">{{ playlist.title }}</h5>
     <div class="row row-cols-2 mb-2 justify-content-between">
-      <a class="card-author mb-0 overflow-hidden" href="/library">{{ playlist.owner_id }}</a> <!-- hier eine Abrfrage zum Namen des Owners ergänzen und Link zum Profil-->
+      <a class="card-author mb-0 overflow-hidden" href="/library">{{ playlist.owner_id }}</a>
       <div class="logos align-items-center">
         <a class="linkedButton appleLink my-auto py-auto"><i class="bi-apple"></i></a><a> | </a>
         <a class="linkedButton spotifyLink my-auto py-auto"><i class="bi-spotify"></i></a><a> | </a>
