--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-4 mx-auto">
+<div class="mt-4 mx-auto w-75">
+  <h2 class="mb-1 ms-4">{{ title }}</h2>
   <div class="row row-cols-auto mx-auto justify-content-center">
-    <h2 class="mb-1">{{ title }}</h2> <div class="w-100"></div>
     <app-playlist
       class="col my-2 p-0 mx-2" style="width: 21em"
       *ngFor="let playlist of playlists"
