--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="mx-auto text-center sticky-top namebar align-tiems-center" [ngClass]="{'shrink': isShrunk}">
     <div class="h-100 my-auto align-items-center h-100">
         <img class="rounded-circle imgProfile" [ngClass]="{'shrink': isShrunk}" src="https://img.fotocommunity.com/papagei-frisst-loewenzahn-5b0326d5-65d2-4914-a1b6-1751830ed208.jpg?height=1080"/>
-        <h2>{{ this.display_name }}</h2>
+        <h2>{{ user.display_name }}</h2>
     </div>
     <div class="bottomBorder mx-auto pt-3" [ngClass]="{'shrink': isShrunk}"></div>
 </div>
