Toast statt alert (bin jetzt zufrieden)

--- a/src/frontend/TuneShare/src/app/app.component.html
+++ b/src/frontend/TuneShare/src/app/app.component.html
@@ -56,9 +56,9 @@
           <i class="bi bi-person-circle"></i>
         </a>
         <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarDropdown">
-          <li><a class="nav-link" href="/register">Account</a></li>
+          <li><a class="nav-link" href="#">Account</a></li>
           <li><a class="nav-link" href="#">Settings</a></li>
-          <li><a class="nav-link" href="#">Sign out</a></li>
+          <li><a class="nav-link" href="/register">Sign out</a></li>
         </ul>
       </li>
     </ul>
