--- a/src/frontend/TuneShare/src/app/registration/registration.component.html
+++ b/src/frontend/TuneShare/src/app/registration/registration.component.html
@@ -11,7 +11,7 @@
 
                 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="mx-1 mx-md-4">
 
-                  <div class="d-flex flex-row align-items-center mb-4">
+                  <div class="d-flex flex-row align-items-center mb-2">
                     <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
                       <input [ngClass]="{
@@ -20,10 +20,12 @@
                       <label for="email" *ngIf="email.invalid && (email.dirty || email.touched)"
                              class="text-danger">Email
                         not valid</label>
+                      <label for="email" *ngIf="!(email.invalid && (email.dirty || email.touched))"
+                             class="text-danger"></label>
                     </div>
                   </div>
 
-                  <div class="d-flex flex-row align-items-center mb-4">
+                  <div class="d-flex flex-row align-items-center mb-2">
                     <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
                       <input [ngClass]="{
@@ -33,6 +35,9 @@
                       <label for="password"
                              *ngIf="password.invalid && (password.dirty || password.touched)"
                              class="text-danger">Password not strong enough</label>
+                      <label for="password"
+                             *ngIf="!(password.invalid && (password.dirty || password.touched))"
+                             class="text-danger"></label>
                     </div>
                   </div>
 
