--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -1,13 +1,13 @@
-<div class="mt-4 mx-auto w-75">
-  <h2 class="mb-1 ms-4">{{ title }}</h2>
+<div class="mt-4 px-4" style="width: 95%">
+  <h2 class="mb-1">{{ title }}</h2>
   <div class="row row-cols-auto mx-auto justify-content-center">
     <app-playlist
-      class="col my-2 p-0 mx-2" style="width: 21em"
+      class="col my-2 p-0" style="width: 21em"
       *ngFor="let playlist of playlists"
       [playlist]="playlist"
     ></app-playlist>
-    <div class="col p-0 mx-2" style="width: 21em; height: 0;"></div>
-    <div class="col p-0 mx-2" style="width: 21em; height: 0;"></div>
-    <div class="col p-0 mx-2" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
   </div>
 </div>
