--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.scss
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.scss
@@ -63,7 +63,7 @@
 
 .iconFollowPlain:hover{
   transition: transform 0.2s ease-out;
-  transform: scale(1.55);
+  transform: scale(1.05);
 }
 
 .iconFollowPlain.transformIcon{
@@ -73,6 +73,11 @@
 
 .iconFollowPlain.newFollow{
     transform: rotateY(360deg);
+}
+
+.userInfo{
+  text-align: center;
+  margin-bottom: 1em;
 }
 
 a{
